--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "ABCDiatype Light";
+  src: url("ABCDiatype-Light-Trial.woff2") format("woff2"),
+    url("ABCDiatype-Light-Trial.woff2.woff") format("woff"),
+    url("ABCDiatype-Light-Trial.woff2.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
 
 * {
   margin: 0;
@@ -21,9 +30,9 @@ body {
   height: 100vh;
   background: black;
   color: white;
-  font-size: 14px;
-  line-height: 22px;
-  font-family: "Area", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "ABCDiatype Light", Arial, sans-serif;
   text-align: center;
   font-weight: 300;
 }
