--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ p {
 .text-overlay {
   position: absolute;
   text-align: left;
+  mix-blend-mode: exclusion;
   top: 1rem;
   left: 1rem;
   width: 400px;
