--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
   font-size: 20px;
 }
 
-p {
+p:not(:first-of-type) {
   margin-top: 1rem;
 }
 
@@ -78,8 +78,6 @@ p {
   top: 1rem;
   left: 1rem;
   width: 400px;
-  background: rgba(0, 0, 0, 0.8);
-  padding: 1rem;
 }
 
 a {
